# oneul-naliga

./: .gitignore  README.md  YNSE.csv  [해외주식] 기본시세.xlsx  [해외주식] 시세분석.xlsx  [해외주식] 실시간시세.xlsx  oneul-naliga-feature-spec.md  stock_list_20260319.xlsx  xlsx_compact.txt  xlsx_extract.txt  국내업종 현재지수[v1_국내주식-063].xlsx  실시간 (웹소켓) 접속키 발급[실시간-000].xlsx  주식 목록 예시.xlsx  한국투자증권_Hashkey.xlsx  한국투자증권_실시간 (웹소켓) 접속키 발급[실시간-000].xlsx  한국투자증권_오픈API_전체문서_20260321_030000.xlsx  한국투자증권_접근토큰폐기(P)[인증-002].xlsx  해외_stock_list_nasdac.csv  해외뉴스종합(제목) [해외주식-053].xlsx  해외속보(제목) [해외주식-055].xlsx  해외주식 가격급등락[해외주식-038].xlsx  해외주식 거래대금순위[해외주식-044].xlsx  해외주식 거래량급증[해외주식-039].xlsx  해외주식 거래량순위[해외주식-043].xlsx  해외주식 거래증가율순위[해외주식-045].xlsx  해외주식 거래회전율순위[해외주식-046].xlsx  해외주식 기간별시세[v1_해외주식-010].xlsx  해외주식 매수체결강도상위[해외주식-040].xlsx  해외주식 상승율_하락율[해외주식-041].xlsx  해외주식 시가총액순위[해외주식-047].xlsx  해외주식 신고_신저가[해외주식-042].xlsx  해외주식 실시간호가[실시간-021].xlsx  해외주식 종목_지수_환율기간별시세(일_주_월_년)[v1_해외주식-012].xlsx  해외주식 체결추이[해외주식-037].xlsx  해외주식 현재가 호가 [해외주식-033].xlsx  해외주식 현재가상세[v1_해외주식-029].xlsx  해외주식 현재체결가[v1_해외주식-009].xlsx  해외주식분봉조회[v1_해외주식-030].xlsx  해외주식조건검색[v1_해외주식-015].xlsx  해외지수분봉조회[v1_해외주식-031].xlsx
backend/: .env.example  .gitignore  pyproject.toml  run.py  supabase_schema.sql
backend/app/: config.py  database.py  main.py
backend/app/data/: stock_list.py
backend/app/models/: line.py  position.py  stock.py
backend/app/routers/: alerts.py  lines.py  news.py  (+3 more)
backend/migrations/: 002_positions.sql  003_line_intent.sql  004_position_lines.sql
backend/scripts/: upload_stock_list.py  upload_stocks.py  upload_us_stock_list.py
(+55 files in other folders)
