[project]
name = "oneul-naliga-backend"
version = "0.1.0"
description = "주식 차트 분석 백엔드 API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-dotenv>=1.0.1",
    "supabase>=2.7.4",
    "httpx>=0.27.2",
    "apscheduler>=3.10.4",
    "python-telegram-bot>=21.5",
    "pydantic-settings>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
